--- a/#src/index.html
+++ b/#src/index.html
@@ -23,6 +23,7 @@
             @@include("_header.html")
 
 
+
             <section class="new_main">
                 <div class="new_main_row">
 
@@ -78,31 +79,31 @@
             </section>
 
             <section class="content" id="portfolio">
-                <div class="content_row">
+                <div class="content_row" >
                     <div class="content_row_first">
                         <div class="content_row_wrap">
-                            <div class="content_row_item"><img src="img/lunenburg.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/lavander.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/wheel.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/dmarina.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/cover.webp"><img src="img/cover.webp" alt=""></div>
+                            <div class="content_row_item" data-photo="img/lavander.jpg" ><img class="photo_item" src="img/lavander.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/wheel.jpg"><img class="photo_item"  src="img/wheel.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
                         </div>
                     </div>
                     
                     <div class="content_row_second">
                         <div class="content_row_wrap">
-                            <div class="content_row_item"><img src="img/lunenburg.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/lavander.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/wheel.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/dmarina.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/lunenburg.jpg"><img src="img/lunenburg.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/lavander.jpg"><img src="img/lavander.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/wheel.jpg"><img src="img/wheel.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
                         </div>
                     </div>
 
                     <div class="content_row_third">
                         <div class="content_row_wrap">
-                            <div class="content_row_item"><img src="img/lunenburg.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/lavander.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/wheel.jpg" alt=""></div>
-                            <div class="content_row_item"><img src="img/dmarina.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/lunenburg.jpg"><img src="img/lunenburg.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/lavander.jpg"><img src="img/lavander.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/wheel.jpg"><img src="img/wheel.jpg" alt=""></div>
+                            <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
                         </div>
                     </div>
                 </div>
