--- a/#src/index.html
+++ b/#src/index.html
@@ -78,36 +78,33 @@
                 </div>
             </section>
 
-            <section class="content" id="portfolio">
-                <div class="content_row" >
-                    <div class="content_row_first">
-                        <div class="content_row_wrap">
-                            <div class="content_row_item" data-photo="img/cover.webp"><img src="img/cover.webp" alt=""></div>
-                            <div class="content_row_item" data-photo="img/lavander.jpg" ><img class="photo_item" src="img/lavander.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/wheel.jpg"><img class="photo_item"  src="img/wheel.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
-                        </div>
-                    </div>
-                    
-                    <div class="content_row_second">
-                        <div class="content_row_wrap">
-                            <div class="content_row_item" data-photo="img/lunenburg.jpg"><img src="img/lunenburg.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/lavander.jpg"><img src="img/lavander.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/wheel.jpg"><img src="img/wheel.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
-                        </div>
-                    </div>
 
-                    <div class="content_row_third">
-                        <div class="content_row_wrap">
-                            <div class="content_row_item" data-photo="img/lunenburg.jpg"><img src="img/lunenburg.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/lavander.jpg"><img src="img/lavander.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/wheel.jpg"><img src="img/wheel.jpg" alt=""></div>
-                            <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
-                        </div>
+
+            <section class="content slider" id="portfolio">
+                <div class="content_row" >
+                    <!-- <div class="content_row_first"> -->
+                    <div class="content_row_wrap">
+                        <div class="content_row_item" data-photo="img/cover.webp"><img src="img/cover.webp" alt=""></div>
+                        <div class="content_row_item" data-photo="img/lavander.jpg" ><img class="photo_item" src="img/lavander.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/wheel.jpg"><img class="photo_item"  src="img/wheel.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/cover.webp"><img src="img/cover.webp" alt=""></div>
+                        <div class="content_row_item" data-photo="img/lavander.jpg" ><img class="photo_item" src="img/lavander.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/wheel.jpg"><img class="photo_item"  src="img/wheel.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/cover.webp"><img src="img/cover.webp" alt=""></div>
+                        <div class="content_row_item" data-photo="img/lavander.jpg" ><img class="photo_item" src="img/lavander.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/wheel.jpg"><img class="photo_item"  src="img/wheel.jpg" alt=""></div>
+                        <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
                     </div>
+                    <!-- </div> -->
+                    <div class="prev"></div>
+                    <div class="next"></div>
+                    
+
                 </div>
             </section>
+
 
             <section class="static_bg_photo">
                 <div class="static_bg_photo_row">
