add animation to slider, add preloader

--- a/#src/index.html
+++ b/#src/index.html
@@ -9,6 +9,10 @@
     <link rel="shortcut icon" href="img/badger.png" type="image/x-icon">
 </head>
 <body>
+    <div class="preloader">
+        <div class="preloader__img"></div>
+    </div>
+
     <div class="social_media_panel">
         <ul class="social_media_panel_list">
             <li class="social_media_panel_list_item"><a href="https://www.instagram.com/parfeniuk/"><img src="img/insta_icon.webp" alt=""></a></li>
@@ -21,8 +25,6 @@
 
         <main class="page"> 
             @@include("_header.html")
-
-
 
             <section class="new_main">
                 <div class="new_main_row">
@@ -82,7 +84,6 @@
 
             <section class="content slider" id="portfolio">
                 <div class="content_row" >
-                    <!-- <div class="content_row_first"> -->
                     <div class="content_row_wrap">
                         <div class="content_row_item" data-photo="img/cover.webp"><img src="img/cover.webp" alt=""></div>
                         <div class="content_row_item" data-photo="img/lavander.jpg" ><img class="photo_item" src="img/lavander.jpg" alt=""></div>
@@ -97,7 +98,6 @@
                         <div class="content_row_item" data-photo="img/wheel.jpg"><img class="photo_item"  src="img/wheel.jpg" alt=""></div>
                         <div class="content_row_item" data-photo="img/dmarina.jpg"><img src="img/dmarina.jpg" alt=""></div>
                     </div>
-                    <!-- </div> -->
                     <div class="prev"></div>
                     <div class="next"></div>
                     
