--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -3,14 +3,13 @@
 
         <div class="footer_row">
             <div class="footer_icon footer_el">
-                <a href="#top" class="to_top"><div class="img_before scroll_to_top_button">
+                <a href="#start" class="to_top"><div class="img_before scroll_to_top_button">
                     <img src="img/icon_up.webp" alt="" class="footer_first_icon">
                     <img src="img/icon_up_2.webp" alt="" class="footer_second_icon">
                 </div></a>
-                
             </div>
             <div class="footer_up footer_el">
-                <a href="#top"  class="footer_up scroll_to_top_button to_top" >
+                <a href="#start"  class="footer_up scroll_to_top_button to_top" >
                    Наверх 
                 </a>                
             </div>
