--- a/#src/_header.html
+++ b/#src/_header.html
@@ -3,19 +3,19 @@
 
         <nav class="header_menu menu">
 
-            <div class="menu_burger">
+            <div class="burger">
                 <span></span>
-                <span></span>
-                <span></span>
+                <!-- <span></span>
+                <span></span> -->
             </div>
 
             <div class="menu_body">
                 <ul class="menu_list">
 
                     <li><div><a href="" class="menu_link">ГЛАВНАЯ</a></div></li>
-                    <li><div><a href="#about" class="menu_link" data-nav="about">ОБО МНЕ</a></div></li>
-                    <li><div><a href="#portfolio" class="menu_link" data-nav="portfolio">ПОРТФОЛИО</a></div></li>
-                    <li><div><a href="#contacts" class="menu_link" data-nav="contacts">СВЯЗАТЬСЯ</a></div></li>
+                    <li><div><a href="#about" class="menu_link" data-nav="#about">ОБО МНЕ</a></div></li>
+                    <li><div><a href="#portfolio" class="menu_link" data-nav="#portfolio">ПОРТФОЛИО</a></div></li>
+                    <li><div><a href="#contacts" class="menu_link" data-nav="#contacts">СВЯЗАТЬСЯ</a></div></li>
                     <li><div><a href="" class="menu_link">СВАДЕБНЫЕ АЛЬБОМЫ</a></div></li>
                     <li><div><a href="" class="menu_link">ОНЛАЙН-ЗАКАЗ</a></div></li>
 
@@ -24,7 +24,7 @@
         </nav>
 
         <!-- Timer -->
-        <div class="timer">
+        <!-- <div class="timer">
 
             <div class="timer_item">
                 <div><span id="days">12</span> дней </div>
@@ -39,6 +39,7 @@
                 <div><span id="seconds">55</span> секунд </div>
             </div>
 
-        </div>
+        </div> -->
 	</div>
 </header>
+
