add touch events on slider, hide checkbox properly, add x to burger, add keypress events to close or change slides and close form popup, add media to move social icons

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,12 +1,12 @@
 
-<footer class="footer">
+<!-- <footer class="footer">
 
         <div class="footer_row">
             <div class="footer_icon footer_el">
                 <a href="#start" class="to_top"><div class="img_before scroll_to_top_button">
-                    <img src="img/icon_up.webp" alt="" class="footer_first_icon">
-                    <img src="img/icon_up_2.webp" alt="" class="footer_second_icon">
-                </div></a>
+                    <img src="img/icon_up.webp" alt="" class="footer_first_icon"> -->
+                    <!-- <img src="img/icon_up_2.webp" alt="" class="footer_second_icon"> -->
+                <!-- </div></a>
             </div>
             <div class="footer_up footer_el">
                 <a href="#start"  class="footer_up scroll_to_top_button to_top" >
@@ -18,5 +18,26 @@
             </div>
 
         </div>
+
+</footer> -->
+
+
+<footer class="footer">
+
+    <div class="footer__row">
+
+        <div class="footer__arrow">
+            <a href="#start" class="to_top"><img src="img/icon_up.webp" alt="to top"></a>
+        </div>
+
+        <div class="footer__up">
+            <a href="#start"  class="to_top" >Наверх </a>                
+        </div>
+
+        <div class="footer__copyright">
+            ©2023 Александр Парфенюк. Сайт создан на кресле.
+        </div>
+
+    </div>
 
 </footer>
