--- a/#src/_popup_window.html
+++ b/#src/_popup_window.html
@@ -36,8 +36,8 @@
                 <label for="formMessage2" class="form__label">Тариф</label>
                 <select name="price" class="select">
                     <option value="one hour" selected>1час - 1500</option>
-                    <option value="three hours" selected>3часа - 4000</option>
-                    <option value="more" selected>Больше</option>
+                    <option value="three hours" >3часа - 4000</option>
+                    <option value="more" >Больше</option>
                 </select> 
             </div>
             <div class="form__item">
@@ -53,7 +53,7 @@
             <div class="form__item">
                 <div class="checkbox">
                     <input id="formAgreement1" checked type="checkbox" name="agreement" class="checkbox__input _req">
-                    <label for="formAgreement1" class="checkbox__label"><span>Я даю свое согласие на обработку персональных данных в соответствии с <a href="#">условиями*</a></span></label>
+                    <label for="formAgreement1" class="checkbox__label"><span>Я даю свое согласие на обработку персональных данных в соответствии с <a href="#" tabindex="-1">условиями*</a></span></label>
                 </div>
             </div>
             <button type="submit" class="form__button">Отправить</button>
