fixed burger(should have deleted transform-style: preserve-3d from his parent element), add swipes for touchscreens

--- a/#src/index.html
+++ b/#src/index.html
@@ -10,7 +10,7 @@
     <!-- не забудь потом включить индексацию -->
     <title>Parfeniuk Photo</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="shortcut icon" href="img/badger.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/badger.webp" type="image/x-icon">
 </head>
 <body>
     <script>
