modyfied slide animation

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -14,8 +14,8 @@
                     <li><div><a href="#about" class="menu_link" data-nav="#about">ОБО МНЕ</a></div></li>
                     <li><div><a href="#portfolio" class="menu_link" data-nav="#portfolio">ПОРТФОЛИО</a></div></li>
                     <li><div><a href="#contacts" class="menu_link" data-nav="#contacts">СВЯЗАТЬСЯ</a></div></li>
-                    <li><div><a href="" class="menu_link">СВАДЕБНЫЕ АЛЬБОМЫ</a></div></li>
-                    <li><div><a href="#" class="menu_link" data-popup="_popupForm">ОНЛАЙН-ЗАКАЗ</a></div></li>
+                    <li><div><a href="" class="menu_link">АЛЬБОМЫ</a></div></li>
+                    <li><div><a href="#" class="menu_link" data-popup="_popupForm">ЗАКАЗАТЬ ОНЛАЙН</a></div></li>
 
                 </ul>
             </div>
