fixed second form(deleted prevent default from wrapper)

--- a/#src/_popup_window.html
+++ b/#src/_popup_window.html
@@ -44,7 +44,7 @@
                 <div class="form__label">Прикрепить референс:</div>
                 <div class="file">
                     <div class="file__item">
-                        <input id="formReference1" accept=".jpg, .png, .gif, .webp" type="file" name="reference" class="file__input">
+                        <input id="formReference1" accept=".jpg, .jpeg, .png, .gif, .webp" type="file" name="reference" class="file__input">
                         <div class="file__button">Выбрать</div>
                     </div>
                     <div class="file__preview"></div>
