del about paragraph

--- a/#src/index.html
+++ b/#src/index.html
@@ -81,7 +81,7 @@
                             <div class="about_text_text">
                                 <div class="about_text_container_p">
                                     <p class="about_p1">Добро пожаловать на мой сайт! <br>Я - Александр Парфенюк, и я занимаюсь фотографией уже больше 10 лет. Для меня фотография - больше, чем профессия, или хобби. Это мой стиль жизни. По этому и фотографии у меня всегда получаются искренними и наполненными эмоциями. Если Вы хотите заказать семейную съемку, свадебную фотосессию, или просто сделать несколько портретов для души - поздравляю, Вы пришли по адресу. </p>
-                                    <p class="about_p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum ut modi suscipit voluptates quaerat odio, eligendi tenetur quidem sunt fugit. Sit, placeat at consequatur dignissimos porro corporis molestiae earum cum!.</p>
+                                    <!-- <p class="about_p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum ut modi suscipit voluptates quaerat odio, eligendi tenetur quidem sunt fugit. Sit, placeat at consequatur dignissimos porro corporis molestiae earum cum!.</p> -->
   
                                 </div>
                             </div>
