changed and min photos

--- a/#src/index.html
+++ b/#src/index.html
@@ -68,11 +68,38 @@
                     </div> 
                 </section>
 
+
+
+                <section class="content slider" id="portfolio">
+                    <div class="content_row" >
+                        <div class="content_row_wrap">
+                            <div class="content_row_item i1" data-photo="img/bech2.jpg" ><img class="photo_item" src="img/bech2.jpg" alt="couple"></div>
+                            <div class="content_row_item i2" data-photo="img/girl1.jpg"><img class="photo_item"  src="img/girl1.jpg" alt="girl"></div>
+                            <div class="content_row_item i3" data-photo="img/kievmore1.jpg"><img class="photo_item"  src="img/kievmore1.jpg" alt="girl"></div>
+                            <div class="content_row_item i4" data-photo="img/natasha1.jpg"><img class="photo_item"  src="img/natasha1.jpg" alt="mother and child"></div>
+                            <div class="content_row_item i5" data-photo="img/kievmore8.jpg"><img class="photo_item"  src="img/kievmore8.jpg" alt="girl"></div>
+                            <div class="content_row_item i6" data-photo="img/vlistiah6min.jpg"><img class="photo_item"  src="img/vlistiah6min.jpg" alt="girl"></div>
+                            <div class="content_row_item i7" data-photo="img/natasha7.jpg"><img class="photo_item"  src="img/natasha7.jpg" alt="mother and child"></div>
+                            <div class="content_row_item i8" data-photo="img/kievmore4.jpg"><img class="photo_item"  src="img/kievmore4.jpg" alt="girl"></div>
+                            <div class="content_row_item i9" data-photo="img/dev4.jpg"><img class="photo_item"  src="img/dev4.jpg" alt="hen-party"></div>
+                            <div class="content_row_item i10" data-photo="img/family4.jpg"><img class="photo_item"  src="img/family4.jpg" alt="family"></div>
+                            <div class="content_row_item i11" data-photo="img/girl5.jpg" ><img class="photo_item" src="img/girl5.jpg" alt="girl"></div>
+                            <div class="content_row_item i12" data-photo="img/vlistiah7min.jpg"><img class="photo_item"  src="img/vlistiah7min.jpg" alt="girl"></div>
+
+
+                        </div>
+                        <div class="prev"></div>
+                        <div class="next"></div>
+                        
+                    </div>
+                </section>
+
+
                 <section class="about" id="about">
                     <div class="about_row">
 
                         <div class="about_img">
-                            <img src="img/weddingcat.jpg" alt="Alexander Parfeniuk family photographer">
+                            <img src="img/photo_cat.jpg" alt="Alexander Parfeniuk family photographer">
                         </div>
                         <div class="about_text">
 
@@ -88,30 +115,6 @@
 
                         </div>
 
-                    </div>
-                </section>
-
-                <section class="content slider" id="portfolio">
-                    <div class="content_row" >
-                        <div class="content_row_wrap">
-                            <div class="content_row_item i1" data-photo="img/bech2.jpg" ><img class="photo_item" src="img/bech2.jpg" alt="couple"></div>
-                            <div class="content_row_item i2" data-photo="img/girl1.jpg"><img class="photo_item"  src="img/girl1.jpg" alt="girl"></div>
-                            <div class="content_row_item i3" data-photo="img/kievmore1.jpg"><img class="photo_item"  src="img/kievmore1.jpg" alt="girl"></div>
-                            <div class="content_row_item i4" data-photo="img/natasha1.jpg"><img class="photo_item"  src="img/natasha1.jpg" alt="mother and child"></div>
-                            <div class="content_row_item i5" data-photo="img/kievmore8.jpg"><img class="photo_item"  src="img/kievmore8.jpg" alt="girl"></div>
-                            <div class="content_row_item i6" data-photo="img/vlistiah6.jpg"><img class="photo_item"  src="img/vlistiah6.jpg" alt="girl"></div>
-                            <div class="content_row_item i7" data-photo="img/natasha7.jpg"><img class="photo_item"  src="img/natasha7.jpg" alt="mother and child"></div>
-                            <div class="content_row_item i8" data-photo="img/kievmore4.jpg"><img class="photo_item"  src="img/kievmore4.jpg" alt="girl"></div>
-                            <div class="content_row_item i9" data-photo="img/dev4.jpg"><img class="photo_item"  src="img/dev4.jpg" alt="hen-party"></div>
-                            <div class="content_row_item i10" data-photo="img/family4.jpg"><img class="photo_item"  src="img/family4.jpg" alt="family"></div>
-                            <div class="content_row_item i11" data-photo="img/girl5.jpg" ><img class="photo_item" src="img/girl5.jpg" alt="girl"></div>
-                            <div class="content_row_item i12" data-photo="img/vlistiah7.jpg"><img class="photo_item"  src="img/vlistiah7.jpg" alt="girl"></div>
-
-
-                        </div>
-                        <div class="prev"></div>
-                        <div class="next"></div>
-                        
                     </div>
                 </section>
 
